Fixed top nav bar arrangement. Added Title to page center and altered colour scheme slightly in alignment with design

--- a/Web/stylesheets/main-sheet.css
+++ b/Web/stylesheets/main-sheet.css
@@ -10,20 +10,49 @@ h1 {
     color: #1FC2AF;
 }
 
+nav {
+    padding: 20px;
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  nav li {
+    display: inline;
+  }
+
+.account-buttons {
+    float: right;
+    margin-top: -5px;   
+}
+
+nav .button-one {
+    margin-left: 5px;
+}
+
 .button-one {
     background-color: #08ED9B;
+    border-color: chartreuse;
+    color: black;
+}
+
+.button-one:hover {
+    background-color: #055757;
+    border-color: #055757;
 }
 
 .button-two {
     background-color: #17F1D8;
 }
 
-#override {
-    background-color: #08ED9B;
-    border-color: #08ED9B;
-}
-
-#override:hover {
-    background-color: grey;
-    border-color: grey;
+.title-center {
+    margin: 0;
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
 }
