--- a/Web/stylesheets/notifications.css
+++ b/Web/stylesheets/notifications.css
@@ -1,5 +1,26 @@
-.signupalert {
+/* success notification global attributes */
+
+.success {
     background: #ffdb9b;
+    border-left: #ffa502;
+    color: #ce8500;
+}
+
+.success .close-btn {
+    background: #ffd080;
+}
+
+.success .close-btn:hover {
+    background: #ffc766;
+}
+
+.success .close-btn .fa-times {
+    color: #ce8500;
+    font-size: 22px;
+    line-height: 40px;
+}
+
+.signupalert {
     padding: 20px 40px;
     min-width: 420px;
     position: absolute;
@@ -7,7 +28,7 @@
     top: 20px;
     overflow:hidden;
     border-radius:4px;
-    border-left: 8px solid #ffa502;
+    border-left: 8px solid;
     opacity: 0;
     pointer-events: none;
 }
@@ -17,14 +38,12 @@
     left: 20px;
     top: 50%;
     transform: translateY(-50%);
-    color: #ce8500;
     font-size: 30px;
 }
 
 .signupalert .msg {
     padding: 0 20px;
     font-size: 18px;
-    color: #ce8500;
 }
 
 .signupalert .close-btn {
@@ -32,7 +51,6 @@
     right: 0px;
     top: 50%;
     transform: translateY(-50%);
-    background: #ffd080;
     padding: 20px 18px;
     cursor:pointer;
 }
@@ -41,7 +59,6 @@
 /* login alert */
 
 .loginalert {
-    background: #ffdb9b;
     padding: 20px 40px;
     min-width: 420px;
     position: absolute;
@@ -49,7 +66,7 @@
     top: 20px;
     overflow:hidden;
     border-radius:4px;
-    border-left: 8px solid #ffa502;
+    border-left: 8px solid;
     opacity: 0;
     pointer-events: none;
 }
@@ -59,14 +76,12 @@
     left: 20px;
     top: 50%;
     transform: translateY(-50%);
-    color: #ce8500;
     font-size: 27px;
 }
 
 .loginalert .msg {
     padding: 0 20px;
     font-size: 18px;
-    color: #ce8500;
 }
 
 .loginalert .close-btn {
@@ -74,7 +89,6 @@
     right: 0px;
     top: 50%;
     transform: translateY(-50%);
-    background: #ffd080;
     padding: 20px 18px;
     cursor:pointer;
 }
@@ -82,7 +96,6 @@
 /* logout alert */
 
 .logoutalert {
-    background: #ffdb9b;
     padding: 20px 40px;
     min-width: 420px;
     position: absolute;
@@ -90,7 +103,7 @@
     top: 20px;
     overflow:hidden;
     border-radius:4px;
-    border-left: 8px solid #ffa502;
+    border-left: 8px solid;
     opacity: 0;
     pointer-events: none;
 }
@@ -100,14 +113,12 @@
     left: 20px;
     top: 50%;
     transform: translateY(-50%);
-    color: #ce8500;
     font-size: 27px;
 }
 
 .logoutalert .msg {
     padding: 0 20px;
     font-size: 18px;
-    color: #ce8500;
 }
 
 .logoutalert .close-btn {
@@ -115,22 +126,8 @@
     right: 0px;
     top: 50%;
     transform: translateY(-50%);
-    background: #ffd080;
     padding: 20px 18px;
     cursor:pointer;
-}
-
-
-/* close button */
-
-.close-btn:hover {
-    background: #ffc766;
-}
-
-.close-btn .fa-times {
-    color: #ce8500;
-    font-size: 22px;
-    line-height: 40px;
 }
 
 /* Animations */
